<resources>
    <string name="app_name" translatable="false">PrioriListy</string>

    <string name="action_settings">Settings</string>
    <string name="action_delete_test" translatable="false">Deletion test</string>
    <string name="action_test_something" translatable="false">Test something else</string>
    <string name="no_due_date">No due date</string>
    <string name="none">None</string>
    <string name="select_date">Select date</string>
    <string name="select_due_date" translatable="false">Select due date</string>
    <string name="pref_sort_by_key" translatable="false">Sort by</string>
    <string name="sort_by">Sort by</string>
    <string name="due_date">Due date</string>
    <string name="pref_priority_key" translatable="false">Priority</string>
    <string name="priority">Priority</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high_priority">High priority</string>
    <string name="low_priority">Low priority</string>
    <string name="medium_priority">Medium priority</string>
    <string name="completed">Completed</string>
    <string name="intent_adding_or_editing_key" translatable="false">Adding or editing</string>
    <string name="intent_todo_key" translatable="false">Todo</string>
    <string name="add_new_task">Add New Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="add_task">Add Task</string>
    <string name="update_task">Update Task</string>
    <string name="describe_your_task">Describe your task</string>
    <string name="description_cannot_be_empty">Task description cannot be empty.</string>
    <string name="category_cannot_be_empty">Please select atleast 1 Benefits.</string>

    <!--for onSaveInstanceState in AddOrEditTodoActivity-->
    <string name="task_description_key" translatable="false">task description</string>
    <string name="priority_key" translatable="false">priority</string>
    <string name="no_due_date_key" translatable="false">no due date</string>
    <string name="year_key" translatable="false">year</string>
    <string name="month_key" translatable="false">month</string>
    <string name="day_key" translatable="false">day</string>
    <string name="completed_key" translatable="false">completed</string>
    <string name="add_or_edit_key" translatable="false">add or edit</string>
    <string name="id_key" translatable="false">id</string>

    <!--for the App Widget-->
    <string name="complete_or_edit_task">Complete or Edit Task?</string>
    <string name="task_done">Task Done</string>
    <string name="cancel">Cancel</string>
    <string name="completion">Completion</string>

    <!--for Notifications-->
    <string name="main_notification_channel_name" translatable="false">Primary</string>
    <string name="due_and_overdue_tasks">Due and overdue tasks</string>
    <string name="you_have">You have\u0020</string>
    <string name="due_today">\u0020due today</string>
    <string name="and">, and\u0020</string>

    <!--Additional accessibility contentDescriptions (some just use existing strings above)-->
    <string name="high_priority_task_red_star">Red star for high priority task</string>
    <string name="medium_priority_task_orange_star">Orange star for medium priority task</string>
    <string name="low_priority_task_yellow_star">Yellow star for low priority task</string>
    <string name="completed_task_grey_star">Grey star for completed task</string>
    <string name="Categories">Benefits</string>
    <string name="tagline">tagline</string>
    <string name="premium_user">Premium User</string>
    <string name="free_user">Free User</string>
    <string name="sign_out">Sign out?</string>
    <string name="delete_account">Are you sure to Delete you Account?</string>
    <string name="delete_account_desc">All the associated data with your account will be deleted forever.</string>
    <string name="delete_benefit">Are you sure to delete benefit?</string>
    <string name="delete_benefit_message">Deleting this benefit will delete this from all To Do items</string>
    <string name="are_you_sure">Are you sure you want to Sign out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="task_updated">Task Updated</string>
    <string name="please_login">Please login to continue</string>
    <string name="to_do_list_maker">To Do List Maker</string>
    <string name="items_sorted_by_the_number_of_benefits">Items Sorted By The Number Of Benefits</string>
    <string name="user_email_com">user@email.com</string>
    <string name="akshay_kumar">Akshay Kumar</string>
    <string name="don_t_you_have_an_account_create">Don\'t you have an account? Create</string>
    <string name="logout">Logout</string>
    <string name="login_first">You need to login first</string>
    <string name="upgrade_master_list">Upgrade your membership to create more lists</string>
    <string name="upgrade_todo_list">Upgrade your membership to create todo items</string>
    <string name="banner_ad_id">ca-app-pub-3111421321050812/4092511181</string>
    <string name="banner_ad_test">ca-app-pub-3111421321050812/4092511181</string>
    <string name="_0_99_month">Tier 1</string>
    <string name="_9_99_month">Tier 2</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="create_up_to_20_to_do_lists">CREATE UP TO 20 LISTS</string>
    <string name="create_up_to_3_to_do_lists">CREATE UP TO 3 LISTS</string>
    <string name="title_add_benefit">Add Benefits</string>
    <string name="tap_target_Ok">OK</string>

    <string name="rate_dialog_title">Rate this app</string>
    <string name="rate_dialog_message">If you enjoy using this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thanks for your support!</string>
    <string name="rate_dialog_ok">Rate It Now</string>
    <string name="rate_dialog_cancel">Remind Me Later</string>
    <string name="rate_dialog_no">No, Thanks</string>
    <string name="add_benefit">Add Benefits</string>
    <string name="text_update_button_bottom">You won\'t be charged yet. Click this button to see prices in your local currency.</string>
    <string name="will_you_rate_us_5_stars">Will you rate us 5 stars on Google Play?</string>

    <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        FCM registration token to logcat.</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <!-- [START fcm_default_icon_string] -->
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <!-- [END fcm_default_icon_string] -->
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>
    <string name="removes_ads_completely">Completely Removes App Ads for a year</string>
    <string name="billing_license_key">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAnDatsVXJEFzzwnOEBiE5wSffxr+dEazc3zbf5t5jK1NKYPlfBbeN2M8ZEA38YRt0pQ0WfnXGcJ0mauXH/0xtXdo9Hv6uyzn3W73W6RxTbc5fk2950Tn0fqHkTh6wZoEJBaLn5OnhUy6GE0Yf5VM4oj3HeY5li6ESi8PggUMeYmMcvLzcOsQ8rh4G2KBWqXcYOTMREyfFXp6jJLXHDrJqeeSAEnP/aGLPPyi2NRy5S7dp8qPIkjDYt6yU+FICSBcDAPPWO1jNZrWH43ObcDF4KNdp5CAf/HT5GLcwZv+CUvQGgtuOyiN193NE9wpV5jpA2BgV7FxENqe9T1NIPk8AMwIDAQAB</string>
    <string name="license_key">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAnDatsVXJEFzzwnOEBiE5wSffxr+dEazc3zbf5t5jK1NKYPlfBbeN2M8ZEA38YRt0pQ0WfnXGcJ0mauXH/0xtXdo9Hv6uyzn3W73W6RxTbc5fk2950Tn0fqHkTh6wZoEJBaLn5OnhUy6GE0Yf5VM4oj3HeY5li6ESi8PggUMeYmMcvLzcOsQ8rh4G2KBWqXcYOTMREyfFXp6jJLXHDrJqeeSAEnP/aGLPPyi2NRy5S7dp8qPIkjDYt6yU+FICSBcDAPPWO1jNZrWH43ObcDF4KNdp5CAf/HT5GLcwZv+CUvQGgtuOyiN193NE9wpV5jpA2BgV7FxENqe9T1NIPk8AMwIDAQAB</string>
    <string name="revenue_breakdown">Revenue \nBreakdown</string>
    <string name="_2021_22_jon_bell_s_co">© 2021-22 Jon Bell\'s Co.</string>
    <string name="todo">TODO</string>
    <string name="pie_title">Planned Spending Allocations</string>
    <string name="ads_cat">Allowed advertising categories</string>
    <string name="add_update_task">Add/Update Task</string>

    <string name="rewarded_ad_unit_id">ca-app-pub-3111421321050812/1075486012</string>
    <string name="test_rewarded_ad_unit_id">ca-app-pub-3940256099942544/5224354917</string>
    <string name="pause_ads">Pause Ads</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="guest">Guest</string>
    <string name="sign_in_req_for_purchase">Authentication is required, you need to sign in to your Google Account to make this purchase.</string>


</resources>
