<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:background="@color/toolbar_background">

        <include
            android:id="@+id/include"
            layout="@layout/act_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:padding="16dp">

            <ProgressBar
                android:id="@+id/loadingProgressBarUpdate"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_marginStart="-16dp"
                android:layout_marginEnd="-16dp"
                android:indeterminate="true"
                android:indeterminateTint="@color/colorTab"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView3"
                style="@style/AddEditTaskRadioButtonLabels"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/raleway_semibold"
                android:text="Task Description"
                android:textColor="@color/textHeadings"
                android:textSize="17sp"
                app:layout_constraintBottom_toTopOf="@+id/et_task_description"
                app:layout_constraintStart_toStartOf="@+id/et_task_description" />

           <TextView
               android:id="@+id/tv_categories"
               style="@style/AddEditTaskRadioButtonLabels"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="24dp"
               android:textSize="17sp"
               android:fontFamily="@font/raleway_semibold"
               android:text="@string/Categories"
               android:textColor="@color/textHeadings"
               app:layout_constraintStart_toStartOf="@+id/et_task_description"
               app:layout_constraintTop_toBottomOf="@+id/et_task_description" />

           <EditText
               android:id="@+id/et_task_description"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:maxHeight="150dp"
               android:scrollbars="vertical"
               android:layout_marginLeft="4dp"
               android:layout_marginTop="88dp"
               android:layout_marginEnd="4dp"
               android:fontFamily="@font/raleway_medium"
               android:layout_marginRight="4dp"
               android:background="@drawable/disc_edit_text"
               android:ems="10"
               android:gravity="start"
               android:hint="@string/describe_your_task"
               android:inputType="textMultiLine|textCapSentences"
               android:lines="7"
               android:minLines="2"
               android:padding="10dp"
               android:paddingLeft="3dp"
               android:textSize="15sp"
               android:textColor="@color/discp_text"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintHorizontal_bias="0.75"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent" />

           <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
               android:id="@+id/btn_add_or_update_task"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_margin="8dp"
               app:iconTint="@color/white"
               app:iconGravity="textStart"
               android:textAlignment="center"
               app:icon="@drawable/ic_outline_add_task_24"
               app:backgroundTint="@color/todo"
               android:fontFamily="@font/raleway_semibold"
               android:textColor="@android:color/white"
               android:onClick="addOrUpdateTask"
               android:text="@string/add_task"
               app:layout_constraintBottom_toTopOf="@+id/adView"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:id="@+id/timestampCompletedtextView"
                style="@style/AddEditTaskRadioButtonLabels"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:fontFamily="@font/raleway"
                android:text="12, May,1999 14:04:0"
                android:textColor="@color/colorNormalWidgetText"
                android:textSize="13sp"
                android:layout_marginTop="@dimen/_12sdp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/addCategories"
                app:layout_constraintTop_toBottomOf="@+id/addCategories" />

            <com.google.android.material.chip.ChipGroup
               android:id="@+id/chipGroup"
               style="@style/Widget.MaterialComponents.Chip.Choice"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/_20sdp"
               android:visibility="gone"
               app:chipSpacing="@dimen/_4sdp"
               app:layout_constraintEnd_toEndOf="@+id/et_task_description"
               app:layout_constraintStart_toStartOf="@+id/et_task_description"
               app:layout_constraintTop_toBottomOf="@+id/tv_categories" />

           <GridView
               android:id="@+id/grid_view"
               android:layout_width="match_parent"
               android:layout_height="169dp"
               android:numColumns="3"
               android:visibility="gone"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintVertical_bias="0.887" />

           <androidx.cardview.widget.CardView
               android:id="@+id/addCategories"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="24dp"
               android:elevation="1dp"
               android:padding="10dp"
               app:cardBackgroundColor="#E3E2E2"
               app:cardCornerRadius="15dp"
               app:layout_constraintEnd_toEndOf="@+id/chipGroup"
               app:layout_constraintStart_toStartOf="@+id/chipGroup"
               app:layout_constraintTop_toBottomOf="@+id/chipGroup">


               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:orientation="vertical"
                   android:padding="14dp">


                   <TextView
                       android:id="@+id/tv_category_number"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center_horizontal"
                       android:text="No Benefits Selected"
                       android:fontFamily="@font/raleway_semibold"
                       android:textAlignment="center"
                       android:textSize="16sp" />


                   <TextView
                       android:id="@+id/tv_add_more"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center_horizontal"
                       android:layout_marginTop="12dp"
                       android:text="Click here to add or edit benefits"
                       android:textAlignment="center"
                       android:textSize="12sp" />

                   <ImageView

                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center_horizontal"
                       android:src="@android:drawable/ic_menu_add">

                   </ImageView>


               </LinearLayout>
           </androidx.cardview.widget.CardView>

           <TextView
               android:id="@+id/tv"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:text="TextView"
               android:textSize="18sp"
               android:visibility="gone"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintHorizontal_bias="0.045"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintVertical_bias="0.606" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="-16dp"
                android:layout_marginRight="-16dp"
                app:adSize="SMART_BANNER"
                app:adUnitId="@string/banner_ad_test"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"></com.google.android.gms.ads.AdView>

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/fabDeleteItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_4sdp"
                android:text="Delete Item"
                android:backgroundTint="@color/btnRed"
                app:iconTint="@color/white"
                android:fontFamily="@font/raleway_semibold"
                android:textColor="@android:color/white"
                android:layout_marginBottom="@dimen/_8sdp"
                app:icon="@drawable/ic_outline_delete_forever_24"
                app:layout_constraintBottom_toTopOf="@+id/btn_add_or_update_task"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/btn_add_or_update_task" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/fabCompleted"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Completed"
                android:fontFamily="@font/raleway_semibold"
                android:textColor="@android:color/white"
                app:iconTint="@color/white"
                app:icon="@drawable/ic_baseline_done_all_24"
                android:backgroundTint="#4BB543"
                android:layout_marginBottom="@dimen/_8sdp"
                android:layout_marginStart="@dimen/_4sdp"
                app:layout_constraintBottom_toTopOf="@+id/btn_add_or_update_task"
                app:layout_constraintEnd_toEndOf="@+id/btn_add_or_update_task"
                app:layout_constraintStart_toEndOf="@+id/guideline2" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />


        </androidx.constraintlayout.widget.ConstraintLayout>
   </androidx.constraintlayout.widget.ConstraintLayout>
</layout>